# PhonoFlow

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cli.md  configuration.md  index.md  outputs.md  parameter_chain_audit.md  parameter_chain_audit_zh.md  parameter_inventory_full.json  testing.md
examples/: Ga2O3.vasp  Si.cif  Si.vasp  Si_8.vasp  config_batch.yaml  config_single.yaml  tP6_Si.vasp
scripts/: check_compare_plots_are_real.py  validate_output.py
tests/: conftest.py  test_ase_phonopy_conversion.py  test_auto_supercell.py  test_backend_selection.py  test_band_data_export.py  test_band_labels.py  test_band_plot.py  test_band_yaml_path_metadata.py  test_bandpath_defaults.py  test_bandpath_fallback.py  test_bandpath_seekpath_settings.py  test_calorine_backend_import_guard.py  test_cli_cleanup.py  test_cli_module_rename.py  test_cli_thermal_options.py  test_cli_version.py  test_compare_cli_model_options.py  test_compare_models.py  test_compare_models_real_plots.py  test_compare_models_selection.py  test_compare_plot_reality_check.py  test_compare_plot_style.py  test_config.py  test_config_bandpath_symprec.py  test_deepmd_backend.py  test_deepmd_force_audit.py  test_default_config_inference.py  test_default_relax_settings.py  test_dpa4_cli_options.py  test_dpa_cli_defaults.py  test_dpa_model_inventory.py  test_dpa_run_report.py  test_dry_run.py  test_dummy_backend.py  test_fc_method.py  test_force_constants_shape_validation.py  test_force_constants_text_export.py  test_ga2o3_examples_bandpath.py  test_group_velocity.py  (+31 more)
(+74 files in other folders)
